--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.7.4",
+    "@supabase/auth-ui-react": "^0.4.2",
+    "@supabase/supabase-js": "^2.32.0",
     "@types/node": "20.5.0",
-    "@types/react-dom": "18.2.7",
     "@types/react": "18.2.20",
-    "eslint-config-next": "13.4.16",
+    "@types/react-dom": "18.2.7",
     "eslint": "8.47.0",
+    "eslint-config-next": "13.4.16",
     "next": "13.4.16",
-    "react-dom": "18.2.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "encoding": "^0.1.13"
   }
 }
