--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,7 +20,9 @@
     "next": "13.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "react-hook-form": "^7.45.4",
+    "typescript": "5.1.6",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "encoding": "^0.1.13"
